force-app/main/default/objects/EntitlementAudit__c/EntitlementAudit__c.object-meta.xml
<CustomObject>
    <label>EntitleAment Audit</label>
    <nameField>
        <label>Entitlement Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EntitleAment Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>