force-app/main/default/objects/EntitlementAudit__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <description>New value.</description>
    <label>New Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>